--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,7 +10,7 @@
 
   <body>
     <%- body %>
-
+<a href="/drones">Check out drones</a>
     <script src="/js/script.js"></script>
   </body>
 </html>
