--- a/views/drones/create-form.ejs
+++ b/views/drones/create-form.ejs
@@ -1,1 +1,16 @@
 <h2>Create a new drone</h2>
+<form action="/drones/create" method="POST">
+<label >
+Name:
+<input type="text" name ="name"/>
+</label>
+<label>
+    Propellers:
+    <input type="text" name ="propeller"/>
+</label>
+<label >
+    Speed:
+    <input type="text" name ="speed"/>
+</label>
+<button type="submit">create Drone</button>
+</form>
